--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Ubuntu Test
+name: Arduino-Code-Check
 
 on:
   push:
@@ -17,9 +17,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y ninja-build
-          # 必要に応じて他のパッケージやPython3などを入れる
-          # sudo apt-get install -y python3
+          sudo apt-get install -y ninja-build python3
 
       - name: Run test script
         run: |
